# gestao-financeira

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  gestao-financeira.pro
database/: db
src/: main.cpp
src/debugger/: debugger.cpp
src/ui/: GraphNode.cpp  GraphNode.h  GraphView.cpp  GraphView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Window.cpp  Window.h
